@@ -1,22 +1,0 @@
-<?xml version="1.0"?> 
-<!DOCTYPE jdo PUBLIC "-//Sun Microsystems, Inc.//DTD Java Data Objects Metadata 2.0//EN" 
-  "http://java.sun.com/dtd/jdo_2_0.dtd">
-
-<jdo>  
-  <package name="org.apache.hcatalog.metadata">  
-    <class name="HPartitionDoneEvent"  table="HCAT_DONE_PARTITIONS" detachable="true">  
-      <field name="dbName">  
-        <column name="DBNAME" length="128" jdbc-type="VARCHAR"/>
-      </field>
-      <field name="tblName">
-        <column name="TBLNAME" length="128" jdbc-type="VARCHAR"/>
-      </field>
-       <field name="partVals">
-        <column name="partVals" length="4000" jdbc-type="VARCHAR"/>
-      </field>
-     <field name="createTime">
-        <column name="CREATE_TIME"  jdbc-type="LONG"/>
-      </field>
-    </class>
-  </package>
-</jdo>
